--- a/rustdoc/libnotcurses_sys/index.html
+++ b/rustdoc/libnotcurses_sys/index.html
@@ -107,7 +107,8 @@ library can not do.</p>
 </td></tr><tr class='module-item'><td><a class="macro" href="macro.rsleep.html" title='libnotcurses_sys::rsleep macro'>rsleep</a></td><td class='docblock-short'><p>Renders the <a href="../libnotcurses_sys/type.Notcurses.html" title="crate::Notcurses">Notcurses</a> object sleeps for $ms milliseconds.</p>
 </td></tr><tr class='module-item'><td><a class="macro" href="macro.sleep.html" title='libnotcurses_sys::sleep macro'>sleep</a></td><td class='docblock-short'><p>Sleeps for $ms milliseconds.</p>
 </td></tr></table><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
-<table><tr class='module-item'><td><a class="struct" href="struct.NcFile.html" title='libnotcurses_sys::NcFile struct'>NcFile</a></td><td class='docblock-short'><p>A wrapper struct around <code>libc::FILE</code></p>
+<table><tr class='module-item'><td><a class="struct" href="struct.NcFile.html" title='libnotcurses_sys::NcFile struct'>NcFile</a></td><td class='docblock-short'><p>A wrapper struct around
+<a href="https://docs.rs/libc/0.2.80/libc/enum.FILE.html"><code>libc::FILE</code></a></p>
 </td></tr><tr class='module-item'><td><a class="struct" href="struct.__va_list_tag.html" title='libnotcurses_sys::__va_list_tag struct'>__va_list_tag</a></td><td class='docblock-short'></td></tr></table><h2 id='constants' class='section-header'><a href="#constants">Constants</a></h2>
 <table><tr class='module-item'><td><a class="constant" href="constant.NCALIGN_CENTER.html" title='libnotcurses_sys::NCALIGN_CENTER constant'>NCALIGN_CENTER</a></td><td class='docblock-short'><p>Center alignment within an <a href="../libnotcurses_sys/type.NcPlane.html" title="NcPlane"><code>NcPlane</code></a> or terminal.</p>
 </td></tr><tr class='module-item'><td><a class="constant" href="constant.NCALIGN_LEFT.html" title='libnotcurses_sys::NCALIGN_LEFT constant'>NCALIGN_LEFT</a></td><td class='docblock-short'><p>Left alignment within an <a href="../libnotcurses_sys/type.NcPlane.html" title="NcPlane"><code>NcPlane</code></a> or terminal.</p>
@@ -958,7 +959,8 @@ transfer ownership of 'p'; palette256_free() can (ought) still be called.</p>
 </td></tr><tr class='module-item'><td><a class="fn" href="fn.sigsuspend.html" title='libnotcurses_sys::sigsuspend fn'>sigsuspend</a><a title='unsafe function' href='#'><sup>⚠</sup></a></td><td class='docblock-short'><p>Change the set of blocked signals to SET,
 wait until a signal arrives, and restore the set of blocked signals.</p>
 </td></tr></table><h2 id='types' class='section-header'><a href="#types">Type Definitions</a></h2>
-<table><tr class='module-item'><td><a class="type" href="type.FILE_LIBC.html" title='libnotcurses_sys::FILE_LIBC type'>FILE_LIBC</a></td><td class='docblock-short'><p>See <a href="../libnotcurses_sys/struct.NcFile.html" title="NcFile">NcFile</a>. The [<code>libc</code>] crate expects this type of <code>*FILE</code> (an opaque enum)</p>
+<table><tr class='module-item'><td><a class="type" href="type.FILE_LIBC.html" title='libnotcurses_sys::FILE_LIBC type'>FILE_LIBC</a></td><td class='docblock-short'><p>See <a href="../libnotcurses_sys/struct.NcFile.html" title="NcFile">NcFile</a>. The <a href="https://docs.rs/libc/"><code>libc</code></a> crate expects this type
+of <code>*FILE</code> (an opaque enum)</p>
 </td></tr><tr class='module-item'><td><a class="type" href="type.FILE_NC.html" title='libnotcurses_sys::FILE_NC type'>FILE_NC</a></td><td class='docblock-short'><p>See <a href="../libnotcurses_sys/struct.NcFile.html" title="NcFile">NcFile</a>. Notcurses functions expects this type of <code>*FILE</code> (a struct)</p>
 </td></tr><tr class='module-item'><td><a class="type" href="type.NcAlign.html" title='libnotcurses_sys::NcAlign type'>NcAlign</a></td><td class='docblock-short'><p>Alignment within a plane or terminal.
 Left/right-justified, or centered.</p>
