index.html: show logo, centered

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-notcurses
+<p align="center">
+ <img src="https://raw.githubusercontent.com/dankamongmen/notcurses/gh-pages/notcurses-logo.png" alt="NOTCURSES">
+</p>
